# langchain-tutorial

./: README.md  makefile  requirements.txt
saas-smart-report-writer/smart_report_writer/: pyproject.toml
saas-smart-report-writer/smart_report_writer/bench/: out_a_report.docx  out_a_summary.md  out_baseline_report.md
saas-smart-report-writer/smart_report_writer/bench/docs/: example-pandoc.docx
saas-smart-report-writer/smart_report_writer/bench/logs/: settings.yaml
saas-smart-report-writer/smart_report_writer/bench/templates/: template_a.docx  template_b.md
saas-smart-report-writer/smart_report_writer/smart_report_writer.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
smart-report-writer/: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
smart-report-writer/api/: auth.py  deps.py  errors.py  main.py  openapi_overrides.py  routes_generate.py  routes_jobs.py  routes_llm.py  routes_templates.py  routes_uploads.py
smart-report-writer/common/: db.py  exceptions.py  typing.py
smart-report-writer/common/migrations/: env.py  script.py.mako
smart-report-writer/config/: logging.json  prometheus.yml  settings.yml  templates.yml
smart-report-writer/docker/api/: Dockerfile
smart-report-writer/docker/ui/: Dockerfile.react  Dockerfile.streamlit
smart-report-writer/docker/worker/: Dockerfile
smart-report-writer/smart_report_writer/core/analysis/: chains.py  openai.py  (+6 more)
smart-report-writer/ui/react/: index.html  package.json  tsconfig.json
smart-report-writer/ui/streamlit/: api_client.py  app.py  components.py  state.py  theming.toml
smart-report-writer/worker/: adapters.py  healthcheck.py  heartbeat.py  main.py  tasks.py
smart_report_writer_basic/: .gitignore  README.md  pyproject.toml  report.md  requirements.txt  summary.md
smart_report_writer_basic/smart_report_writer/: __init__.py  prompts.py
smart_report_writer_basic/smart_report_writer/demos/: structured_extraction.py
smart_report_writer_basic/smart_report_writer/loaders/: docx_text.py  excel.py  files.py  tables.py
smart_report_writer_basic/smart_report_writer/output/: writers.py
smart_report_writer_basic/smart_report_writer/pipeline/: chains.py  summarize.py
smart_report_writer_basic/tests/: test_cli.py
(+256 files in other folders)
