[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-report-writer"
version = "0.1.0"
description = "Smart Report Writer SaaS"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Smart Report Writer Team" }]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -ra --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
