[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-report-writer"
version = "0.1.0"
description = "Business-grade document summarization and report generator (Ollama + LangChain)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_report_writer*"]
exclude = ["bench*", "tests*", "docs*", "examples*", "smart_report_writer.egg-info*"]
